changed theme color

--- a/css/style.css
+++ b/css/style.css
@@ -6935,7 +6935,7 @@ a.addnewforum {
 	height: 100vh;
 }
 .we-login-register {
-    background: #008acd;
+    background: #FF00FF;
     float: left;
     padding: 50px 75px 50px;
     position: relative;
