--- a/css/style.css
+++ b/css/style.css
@@ -1296,6 +1296,7 @@ header.sticky {
     background: #fff;
     border: 1px solid #ede9e9;
     border-radius: 6px;
+    overflow: hidden;
 }
 
 .sidebar .widget:last-child {
@@ -6573,7 +6574,8 @@ a.addnewforum {
 
 .monthly-weather {
     display: inline-block;
-    margin: 20px 0;
+    margin-top: 20px;
+    margin-bottom: 50px;
     position: relative;
     width: 100%;
     z-index: 2;
@@ -6594,7 +6596,7 @@ a.addnewforum {
     line-height: 14px;
     margin-bottom: 0;
     vertical-align: middle;
-    width: 12.9%;
+    width: 12.6%;
 }
 .widget .monthly-weather > ul > li a {
     display: inline-block;
