--- a/css/style.css
+++ b/css/style.css
@@ -3785,8 +3785,8 @@ nav.breadcrumb {
 }
 
 .page-publishes {
-    border-bottom: 1px solid #e6ecf5;
-    border-top: 1px solid #e6ecf5;
+    /* border-bottom: 1px solid #e6ecf5; */
+    /* border-top: 1px solid #e6ecf5; */
     display: inline-block;
     list-style: outside none none;
     margin-bottom: 0;
@@ -3797,7 +3797,7 @@ nav.breadcrumb {
 .your-page ul.page-publishes > li {
     margin-bottom: 0;
     text-align: center;
-    width: 23.7%;
+    width: 23.5%;
 }
 .your-page ul.page-publishes > li span i {
     font-size: 16px;
